--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,114 @@
     <string name="convert_button">CONVERT</string>
     <string name="binary_hint">Please Enter Your Binary Here</string>
     <string name="binary_input">Binary Input</string>
+
+    <string-array name="keys">
+        <item>01000001</item>
+        <item>01000010</item>
+        <item>01000011</item>
+        <item>01000100</item>
+        <item>01000101</item>
+        <item>01000110</item>
+        <item>01000111</item>
+        <item>01001000</item>
+        <item>01001001</item>
+        <item>01001010</item>
+        <item>01001011</item>
+        <item>01001100</item>
+        <item>01001101</item>
+        <item>01001110</item>
+        <item>01001111</item>
+        <item>01010000</item>
+        <item>01010001</item>
+        <item>01010010</item>
+        <item>01010011</item>
+        <item>01010100</item>
+        <item>01010101</item>
+        <item>01010110</item>
+        <item>01010111</item>
+        <item>01011000</item>
+        <item>01011001</item>
+        <item>01011010</item>
+        <item>01100001</item>
+        <item>01100010</item>
+        <item>01100011</item>
+        <item>01100100</item>
+        <item>01100101</item>
+        <item>01100110</item>
+        <item>01100111</item>
+        <item>01101000</item>
+        <item>01101001</item>
+        <item>01101010</item>
+        <item>01101011</item>
+        <item>01101100</item>
+        <item>01101101</item>
+        <item>01101110</item>
+        <item>01101111</item>
+        <item>01110000</item>
+        <item>01110001</item>
+        <item>01110010</item>
+        <item>01110011</item>
+        <item>01110100</item>
+        <item>01110101</item>
+        <item>01110110</item>
+        <item>01110111</item>
+        <item>01111000</item>
+        <item>01111001</item>
+        <item>01111010</item>
+    </string-array>
+
+    <string-array name="values">
+        <item>A</item>
+        <item>B</item>
+        <item>C</item>
+        <item>D</item>
+        <item>E</item>
+        <item>F</item>
+        <item>G</item>
+        <item>H</item>
+        <item>I</item>
+        <item>J</item>
+        <item>K</item>
+        <item>L</item>
+        <item>M</item>
+        <item>N</item>
+        <item>O</item>
+        <item>P</item>
+        <item>Q</item>
+        <item>R</item>
+        <item>S</item>
+        <item>T</item>
+        <item>U</item>
+        <item>V</item>
+        <item>W</item>
+        <item>X</item>
+        <item>Y</item>
+        <item>Z</item>
+        <item>a</item>
+        <item>b</item>
+        <item>c</item>
+        <item>d</item>
+        <item>e</item>
+        <item>f</item>
+        <item>g</item>
+        <item>h</item>
+        <item>i</item>
+        <item>j</item>
+        <item>k</item>
+        <item>l</item>
+        <item>m</item>
+        <item>n</item>
+        <item>o</item>
+        <item>p</item>
+        <item>q</item>
+        <item>r</item>
+        <item>s</item>
+        <item>t</item>
+        <item>u</item>
+        <item>v</item>
+        <item>w</item>
+        <item>x</item>
+        <item>y</item>
+        <item>z</item>
+    </string-array>
 </resources>
